--- a/chaturaji-android-app/res/layout/activity_main.xml
+++ b/chaturaji-android-app/res/layout/activity_main.xml
@@ -1,15 +1,17 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin">
+<LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@color/main_colour"
+        xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
-            android:id="@+id/hello_world_tv"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="@string/hello_world"/>
+            android:text="@string/user_pass"
+            android:textColor="@color/white"
+            />
 
-</RelativeLayout>
+
+
+</LinearLayout>
