--- a/chaturaji-android-app/res/layout/activity_main.xml
+++ b/chaturaji-android-app/res/layout/activity_main.xml
@@ -1,15 +1,102 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin">
+<LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@color/main_colour"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:weightSum="1">
+
+    <LinearLayout android:layout_width="fill_parent"
+                  android:layout_height="wrap_content"
+                  android:orientation="horizontal"
+                  android:weightSum="1"
+                  android:background="@color/grey">
+
+        <ImageView android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:src="@drawable/ic_launcher"/>
+
+        <TextView android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:text="@string/chaturaji"
+                  android:textColor="@color/white"
+                  android:textSize="40sp"
+                  android:layout_gravity="center"
+                  android:gravity="center"
+                  android:layout_weight="1.01"/>
+
+        <ImageView android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:src="@drawable/ic_launcher"/>
+    </LinearLayout>
 
     <TextView
-            android:id="@+id/hello_world_tv"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="57dp"
+            android:layout_gravity="center"
+            android:gravity="center_vertical"
+            android:text="@string/user_pass"
+            android:textSize="15sp"
+            android:textColor="@color/white"/>
+    <EditText
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/hello_world"/>
+            android:inputType="textPersonName"
+            android:text="@string/username"
+            android:ems="10"
+            android:textColor="@color/white"
+            android:id="@+id/editText"/>
+    <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:text="@string/password"
+            android:ems="10"
+            android:textColor="@color/white"
+            android:id="@+id/editText2"/>
 
-</RelativeLayout>
+    <LinearLayout android:layout_width="wrap_content"
+                  android:layout_height="34dp"
+                  android:orientation="vertical"
+                  android:layout_weight="0.26"
+                  android:layout_gravity="center"
+                  android:gravity="center" android:weightSum="1">
+        <Button
+                android:layout_width="300sp"
+                android:layout_height="wrap_content"
+                android:text="@string/login"
+                android:layout_gravity="center"
+                android:gravity="center"
+                style="@style/btnStyleArsenic"
+                android:id="@+id/login_button"/>
+
+        <Space
+                android:layout_width="match_parent"
+                android:layout_height="15dp"/>
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="300sp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center">
+
+            <Button
+                    android:layout_width="110sp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/signup"
+                    android:id="@+id/signup_button"
+                    style="@style/btnStyleArsenic"/>
+            <Space
+                    android:layout_width="15dp"
+                    android:layout_height="match_parent"/>
+            <Button
+                    android:layout_width="190sp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/forgot_password"
+                    android:id="@+id/forgot_button"
+                    style="@style/btnStyleArsenic"/>
+        </LinearLayout>
+
+    </LinearLayout>
+
+</LinearLayout>
