--- a/chaturaji-android-app/res/layout/activity_main.xml
+++ b/chaturaji-android-app/res/layout/activity_main.xml
@@ -56,13 +56,12 @@
             android:id="@+id/editText2"/>
 
     <LinearLayout android:layout_width="wrap_content"
-                  android:layout_height="34dp"
+                  android:layout_height="218dp"
                   android:orientation="vertical"
-                  android:layout_weight="0.26"
                   android:layout_gravity="center"
                   android:gravity="center" android:weightSum="1">
         <Button
-                android:layout_width="300sp"
+                android:layout_width="200sp"
                 android:layout_height="wrap_content"
                 android:text="@string/login"
                 android:layout_gravity="center"
@@ -73,29 +72,22 @@
         <Space
                 android:layout_width="match_parent"
                 android:layout_height="15dp"/>
-        <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="300sp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center">
 
-            <Button
-                    android:layout_width="110sp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/signup"
-                    android:id="@+id/signup_button"
-                    style="@style/btnStyleArsenic"/>
-            <Space
-                    android:layout_width="15dp"
-                    android:layout_height="match_parent"/>
-            <Button
-                    android:layout_width="190sp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/forgot_password"
-                    android:id="@+id/forgot_button"
-                    style="@style/btnStyleArsenic"/>
-        </LinearLayout>
+        <Button
+                android:layout_width="200sp"
+                android:layout_height="wrap_content"
+                android:text="@string/signup"
+                android:id="@+id/signup_button"
+                style="@style/btnStyleArsenic"/>
+        <Space
+                android:layout_width="match_parent"
+                android:layout_height="15dp"/>
+        <Button
+                android:layout_width="200sp"
+                android:layout_height="wrap_content"
+                android:text="@string/forgot_password"
+                android:id="@+id/forgot_button"
+                style="@style/btnStyleArsenic"/>
 
     </LinearLayout>
 
