--- a/chaturaji-android-app/res/layout/main_menu.xml
+++ b/chaturaji-android-app/res/layout/main_menu.xml
@@ -1,37 +1,75 @@
-<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@color/main_colour"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:weightSum="1">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+    <LinearLayout android:layout_width="fill_parent"
+                  android:layout_height="wrap_content"
+                  android:orientation="horizontal"
+                  android:weightSum="1"
+                  android:background="@color/grey">
+
+        <ImageView android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:src="@drawable/ic_launcher"/>
+
+        <TextView android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:text="@string/chaturaji"
+                  android:textColor="@color/white"
+                  android:textSize="40sp"
+                  android:layout_gravity="center"
+                  android:gravity="center"
+                  android:layout_weight="1.01"/>
+
+        <ImageView android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:src="@drawable/ic_launcher"/>
+    </LinearLayout>
+
+    <LinearLayout android:layout_width="wrap_content"
+                  android:layout_height="300dp"
+                  android:orientation="vertical"
+                  android:layout_gravity="center"
+                  android:gravity="center" android:weightSum="1">
 
     <Button
-            android:layout_width="wrap_content"
+            android:layout_width="200sp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="40dp"
             android:text="Single Player"
+            style="@style/btnStyleArsenic"
             android:id="@+id/single_player_button"/>
     <Button
-            android:layout_width="wrap_content"
+            android:layout_width="200sp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginBottom="10dp"
             android:text="Multi Player"
+            style="@style/btnStyleArsenic"
             android:id="@+id/multi_player_button"/>
     <Button
-            android:layout_width="wrap_content"
+            android:layout_width="200sp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:layout_gravity="center"
             android:text="Settings"
+            style="@style/btnStyleArsenic"
             android:id="@+id/settings_button"/>
     <Button
-            android:layout_width="wrap_content"
+            android:layout_width="200sp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginBottom="10dp"
             android:text="Log out"
+            style="@style/btnStyleArsenic"
             android:id="@+id/log_out_button"/>
+
+    </LinearLayout>
+
 </LinearLayout>
