--- a/chaturaji-android-app/res/layout/game_room_item.xml
+++ b/chaturaji-android-app/res/layout/game_room_item.xml
@@ -2,12 +2,61 @@
 
 <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/game_room_row"
-              android:orientation="vertical"
+              android:orientation="horizontal"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="wrap_content">
+
+    <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="5dp"
+            android:id="@+id/gameImage"
+            android:src="@drawable/oneplayer"/>
+
+    <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+                   android:id="@+id/game_room_row"
+                   android:orientation="vertical"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content">
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="5dp"
+            android:textSize="15dip"
+            android:textStyle="bold"
+            android:text="USERNAME"
+            android:id="@+id/game_username"/>
+
+        <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+                       android:id="@+id/game_room_row"
+                       android:orientation="horizontal"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content">
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/room_item"/>
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="5dp"
+            android:text="HUMANS:"
+            android:id="@+id/game_humans"/>
+
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="5dp"
+            android:text="AIs:"
+            android:id="@+id/game_ais"/>
+
+        </LinearLayout >
+
+    </LinearLayout >
+
 </LinearLayout >
