--- a/chaturaji-android-app/res/layout/settings_main.xml
+++ b/chaturaji-android-app/res/layout/settings_main.xml
@@ -4,7 +4,7 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@color/grey" >
+              android:background="@color/main_colour" >
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
