--- a/chaturaji-android-app/res/layout/game_room_item.xml
+++ b/chaturaji-android-app/res/layout/game_room_item.xml
@@ -5,7 +5,7 @@
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:background="@color/main_colour">
+              android:background="@drawable/listitem_background">
 
     <ImageView
             android:layout_width="wrap_content"
