registration request working

--- a/chaturaji-android-app/res/layout/sign_up.xml
+++ b/chaturaji-android-app/res/layout/sign_up.xml
@@ -57,6 +57,6 @@
             style="@style/btnStyleArsenic"
             android:gravity="center"
             android:text="Create Account"
-            android:id="@+id/button"/>
+            android:id="@+id/create_account_button"/>
 
 </LinearLayout>
