--- a/chaturaji-android-app/res/layout/activity_main.xml
+++ b/chaturaji-android-app/res/layout/activity_main.xml
@@ -38,14 +38,16 @@
             android:text="@string/user_pass"
             android:textSize="15sp"
             android:textColor="@color/white"/>
+
     <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
-            android:text="@string/username"
+            android:hint="Email Address"
             android:ems="10"
             android:textColor="@color/white"
-            android:id="@+id/editText"/>
+            android:id="@+id/email_login"/>
+
     <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -53,7 +55,7 @@
             android:text="@string/password"
             android:ems="10"
             android:textColor="@color/white"
-            android:id="@+id/editText2"/>
+            android:id="@+id/password_login"/>
 
     <LinearLayout android:layout_width="wrap_content"
                   android:layout_height="218dp"
