--- a/chaturaji-android-app/res/layout/settings_main.xml
+++ b/chaturaji-android-app/res/layout/settings_main.xml
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="10dp"
-                android:id="@+id/checkBox" android:checked="true"/>
+                android:id="@+id/soundbox" android:checked="true"/>
     </RelativeLayout>
 
 
