--- a/chaturaji-android-app/res/layout/in_game_blue.xml
+++ b/chaturaji-android-app/res/layout/in_game_blue.xml
@@ -1109,30 +1109,103 @@
 
         </LinearLayout>
 
-    <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
+    <LinearLayout android:layout_width="fill_parent"
+                  android:layout_height="fill_parent"
                   android:background="@color/main_colour"
                   android:orientation="vertical"
                   android:layout_weight="2">
 
-        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
-                  android:textColor="@color/white"
-                  android:id="@+id/blue_score"/>
+        <LinearLayout android:layout_width="fill_parent"
+                      android:layout_height="fill_parent"
+                      android:background="@color/main_colour"
+                      android:orientation="horizontal"
+                      android:layout_weight="1"
+                      android:weightSum="4">
 
-        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
-                  android:textColor="@color/white"
-                  android:id="@+id/red_score"/>
+            <LinearLayout android:layout_width="match_parent"
+                          android:layout_height="match_parent"
+                          android:layout_weight="1.9"
+                          android:background="@color/main_colour"
+                          android:orientation="vertical"/>
 
-        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
-                  android:textColor="@color/white"
-                  android:id="@+id/green_score"/>
 
-        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
-                  android:textColor="@color/white"
-                  android:id="@+id/yellow_score"/>
+            <LinearLayout android:layout_width="match_parent"
+                          android:layout_height="match_parent"
+                          android:layout_weight="1.2"
+                          android:gravity="center_vertical"
+                          android:orientation="vertical">
 
-        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
+                <TextView android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textColor="@color/white"
+                    android:layout_weight="1"
+                    android:id="@+id/blue_score"
+                    android:textSize="20sp"
+                    android:gravity="center_vertical"
+                    android:drawableStart="@drawable/blueking"/>
+
+                <TextView android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textColor="@color/white"
+                    android:layout_weight="1"
+                    android:id="@+id/red_score"
+                    android:textSize="20sp"
+                    android:gravity="center_vertical"
+                    android:drawableStart="@drawable/redking"/>
+
+                <TextView android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textColor="@color/white"
+                    android:layout_weight="1"
+                    android:id="@+id/green_score"
+                    android:textSize="20sp"
+                    android:gravity="center_vertical"
+                    android:drawableStart="@drawable/greenking"/>
+
+                <TextView android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textColor="@color/white"
+                    android:id="@+id/yellow_score"
+                    android:layout_weight="1"
+                    android:textSize="20sp"
+                    android:gravity="center_vertical"
+                    android:drawableStart="@drawable/yellowking"/>
+
+            </LinearLayout>
+
+            <LinearLayout android:layout_width="match_parent"
+                          android:layout_height="match_parent"
+                          android:orientation="vertical"
+                          android:layout_weight="1">
+
+                    <TextView android:layout_width="match_parent"
+                              android:layout_height="match_parent"
+                              android:textColor="@color/white"
+                              android:layout_weight="5"
+                              android:gravity="center"
+                              android:text="@string/movelist"
+                              android:textSize="30sp"/>
+
+                    <TextView android:layout_width="match_parent"
+                              android:layout_height="match_parent"
+                              android:textColor="@color/white"
+                              android:background="@color/light_grey"
+                              android:layout_weight="1"
+                              android:id="@+id/movelist"/>
+
+                </LinearLayout>
+
+        </LinearLayout>
+
+        <TextView android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:layout_weight="4"
+                  android:gravity="center"
                   android:textColor="@color/white"
+                  android:textSize="30sp"
                   android:id="@+id/turn"/>
 
+
     </LinearLayout>
+
 </LinearLayout>
