--- a/chaturaji-android-app/res/layout/in_game_blue.xml
+++ b/chaturaji-android-app/res/layout/in_game_blue.xml
@@ -1203,6 +1203,7 @@
                   android:gravity="center"
                   android:textColor="@color/white"
                   android:textSize="30sp"
+                  android:scrollbars = "vertical"
                   android:id="@+id/turn"/>
 
 
