Modifying the listview

--- a/chaturaji-android-app/res/layout/game_room_item.xml
+++ b/chaturaji-android-app/res/layout/game_room_item.xml
@@ -16,11 +16,6 @@
             android:id="@+id/gameImage"
             android:src="@drawable/oneplayer"/>
 
-    <LinearLayout
-                   android:id="@+id/game_room_row"
-                   android:orientation="vertical"
-                   android:layout_width="match_parent"
-                   android:layout_height="wrap_content">
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -33,34 +28,24 @@
             android:text="USERNAME"
             android:id="@+id/game_username"/>
 
-        <LinearLayout
-                       android:id="@+id/game_room_row"
-                       android:orientation="horizontal"
-                       android:layout_width="match_parent"
-                       android:layout_height="wrap_content">
-
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="50dp"
             android:layout_marginTop="5dp"
             android:layout_marginRight="5dp"
             android:textColor="@color/white"
-            android:text="HUMANS:"
+            android:text="0"
             android:id="@+id/game_humans"/>
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
+            android:layout_marginLeft="40dp"
             android:layout_marginTop="5dp"
             android:layout_marginRight="5dp"
             android:textColor="@color/white"
-            android:text="AIs:"
+            android:text="0"
             android:id="@+id/game_ais"/>
-
-        </LinearLayout >
-
-    </LinearLayout >
 
 </LinearLayout >
