--- a/chaturaji-android-app/res/layout/game_rooms.xml
+++ b/chaturaji-android-app/res/layout/game_rooms.xml
@@ -6,6 +6,43 @@
               android:layout_height="match_parent"
               android:background="@color/main_colour">
 
+    <LinearLayout
+                  android:orientation="horizontal"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:paddingBottom="5dp"
+                  android:paddingTop="5dp"
+                  android:background="@color/grey">
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:layout_marginLeft="40dp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Username"
+                android:id="@+id/username_title"/>
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:layout_marginLeft="40dp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Humans"
+                android:id="@+id/human_num_title"/>
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:layout_marginLeft="40dp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="AI"
+                android:id="@+id/ai_num_title"/>
+
+    </LinearLayout>
+
     <ListView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
