--- a/chaturaji-android-app/res/layout/game_rooms.xml
+++ b/chaturaji-android-app/res/layout/game_rooms.xml
@@ -15,7 +15,7 @@
                   android:background="@color/grey">
 
         <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
                 android:layout_marginLeft="40dp"
@@ -27,16 +27,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
-                android:layout_marginLeft="40dp"
+                android:layout_marginLeft="30dp"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Humans"
+                android:text="Human"
                 android:id="@+id/human_num_title"/>
 
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
-                android:layout_marginLeft="40dp"
+                android:layout_marginLeft="15dp"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="AI"
                 android:id="@+id/ai_num_title"/>
