--- a/chaturaji-android-app/res/layout/activity_main.xml
+++ b/chaturaji-android-app/res/layout/activity_main.xml
@@ -14,7 +14,8 @@
 
         <ImageView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
-                   android:src="@drawable/ic_launcher"/>
+                   android:src="@drawable/ic_launcher"
+                   android:id="@+id/launcher_main"/>
 
         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
@@ -23,7 +24,8 @@
                   android:textSize="40sp"
                   android:layout_gravity="center"
                   android:gravity="center"
-                  android:layout_weight="1.01"/>
+                  android:layout_weight="1.01"
+                  android:id="@+id/login_title"/>
 
         <ImageView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
@@ -37,7 +39,8 @@
             android:gravity="center_vertical"
             android:text="@string/user_pass"
             android:textSize="15sp"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white"
+            android:id="@+id/user_pass_text"/>
 
     <EditText
             android:layout_width="match_parent"
