--- a/chaturaji-android-app/res/layout-small/game_room_item.xml
+++ b/chaturaji-android-app/res/layout-small/game_room_item.xml
@@ -17,7 +17,7 @@
             android:src="@drawable/oneplayer"/>
 
     <TextView
-            android:layout_width="100dp"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
@@ -31,7 +31,7 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
+            android:layout_marginLeft="25dp"
             android:layout_marginTop="5dp"
             android:layout_marginRight="5dp"
             android:textColor="@color/white"
@@ -41,11 +41,20 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
+            android:layout_marginLeft="25dp"
             android:layout_marginTop="5dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginRight="25dp"
             android:textColor="@color/white"
             android:text="0"
             android:id="@+id/game_ais"/>
+
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Join"
+            android:layout_marginTop="3dp"
+            style="@style/btnStyleArsenic"
+            android:onClick="joinGameClickListener"
+            android:id="@+id/join_button"/>
 
 </LinearLayout>
